# aether

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md  delay.dsp  hermite.txt  springreverb.dsp  tapedelay.dsp
.github/workflows/: cmake-multi-platform.yml
faust/: allpass.dsp  interp.dsp  springreverb.dsp
scripts/: package_macos
scripts/package_win/: install.iss
springreverb/: Makefile  bench.c  springreverb.c  springreverb.h  springreverb_inj.cpp
src/: CMakeLists.txt  Makefile  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  bench.c  fastmath.h  filter.c  lfo.h  springreverb.c  springreverb.h  springreverb_vec.c  tapedelay.c  tapedelay.h  tapedelay_inj.cpp
src/GUI/: ArrowButton.cpp  ArrowButton.h  CMakeLists.txt  ComboBox.h  CustomLNF.cpp  CustomLNF.h  DelaySection.cpp  DelaySection.h  Led.cpp  Led.h  PluginEditor.cpp  PluginEditor.h  PresetComponent.cpp  PresetComponent.h  Slider.h  SpreadSlider.cpp  SpreadSlider.h  SpringsGL.cpp  SpringsGL.h  SpringsSection.cpp  SpringsSection.h  Title.cpp  Title.h  ToolTip.cpp  ToolTip.h  Typefaces.cpp  Typefaces.h  Widgets.h
src/GUI/assets/: CMakeLists.txt  magic.xml  spring.shader  springs.shader
src/GUI/fonts/: CMakeLists.txt
src/Presets/: CMakeLists.txt  PresetManager.cpp  PresetManager.h
src/Presets/factory/: CMakeLists.txt  chaotic.preset  dreamy.preset  otherworldly.preset  reverse.preset  springreverb.preset  test.preset
src/dsp/: CMakeLists.txt  Makefile  bench.c  filter.c  filter.h  lfo.h  springreverb.c  springreverb.h  springreverb_inj.cpp  tapedelay.c  tapedelay.h  tapedelay_inj.cpp  windows.h
tapedelay/: tapedelay.dsp
test/: CMakeLists.txt  test_dsp.c
